fixing side list wrapping

--- a/react/challenge-03/src/components/List/ListItem/ListItem.css
+++ b/react/challenge-03/src/components/List/ListItem/ListItem.css
@@ -3,13 +3,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 10px;
   border-bottom: 1px solid #ccc;
 }
 
 .UserInfo {
   display: flex;
   flex-grow: 5;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
   align-items: center;
 }
 
@@ -38,6 +39,7 @@
 
 .UserControls {
   display: flex;
+  margin-bottom: 10px;
   flex-grow: 1;
   height: 60%;
   justify-content: space-between;
@@ -67,4 +69,10 @@
   color: #bbb;
   text-align: center;
   font-size: 20px;
+}
+
+@media (max-width: 700px) {
+  .UserInfo {
+    justify-content: center;
+  }
 }
